# audio

./: pyproject.toml
juli/: Copia_de_AudioDSP_Practico_4.ipynb
juli/Hoja de Ejercicios 1 Audio/: main.tex
juli/Hoja de Ejercicios 2 Audio/: main.tex
juli/Hoja de Ejercicios 3 Audio/: main.tex
juli/Hoja de Ejercicios 4 Audio/: main.tex
juli/Presentacion proyecto Audio/: main.tex
juli/Proyecto final Audio/: caratula.tex  main.tex  refs.bib
notebooks/: 02audioDSP-short_time_example.ipynb
practico3_audiodsp/: AudioDSP_Practico3.ipynb
practico4_audiodsp/: AudioDSP_Practico4.ipynb  practico4_audio
practico4_audiodsp/Archivos_P4/problema1/: tamy-vocals_ground_truth.csv
